--- a/plugin.yml
+++ b/plugin.yml
@@ -5,6 +5,11 @@ api-version: '1.15'
 prefix: DailyReward
 authors: [GrapJeje]
 
+depend:
+  - PlayerPoints
+  - Realtime
+  - CratesPlus
+
 commands:
   dailyrewards:
     description: Menu command for daily rewards.
