Value of live changes
Added some fault code prevention
Added support for offline players
Added soms javadoc
Added a info command
Added a default permission for opening the menu

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,12 @@
 enabled: true
 
+players:
+  37819856-6e9a-4866-9a73-922c8c684b21:
+    dag: 0
+    serverday: 1
+    streak: 1
+    claimed: false
+    bought: false
+
 streak:
   37819856-6e9a-4866-9a73-922c8c684b21: 1
-
-players:
